# mg_exercise

./: CMakeLists.txt  README.md  benchmark.cpp  graph.h  test.cpp
